--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <center>
         <div class="mobile">
           <form action="">
-             <button style="background: white; color:black; width:80%; margin:10px; border:1px black solid;"><a href="signup.html">SIGN UP</a></button><br>
-             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="signin.html">SIGN IN</a></button><br>
-             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="profile.html">PROFILE</a></button><br>
-             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="email.html">EMAIL</a</button><br>
-             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"> <a href="passwrd.html">CHANGE PASSWORD</a></button><br>
-             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="forgot.html">FORGOT PASSWORD</a></button><br>
-             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="filter.html">FILTER</a></button></button><br>
-             <button style="background: white; color:black; width:80%; margin:10Px;  border:1px black solid;"><a href="submit.html">SUBMIT</a></button><br>
+             <button style="background: white; color:black; width:80%; margin:10px; border:1px black solid;"><a href="Forms/signup.html">SIGN UP</a></button><br>
+             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="Forms/signin.html">SIGN IN</a></button><br>
+             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="Forms/profile.html">PROFILE</a></button><br>
+             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="Forms/email.html">EMAIL</a</button><br>
+             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"> <a href="Forms/passwrd.html">CHANGE PASSWORD</a></button><br>
+             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="Forms/forgot.html">FORGOT PASSWORD</a></button><br>
+             <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="Forms/filter.html">FILTER</a></button></button><br>
+             <button style="background: white; color:black; width:80%; margin:10Px;  border:1px black solid;"><a href="Forms/submit.html">SUBMIT</a></button><br>
 
 
 
