--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
              <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="Forms/forgot.html">FORGOT PASSWORD</a></button><br>
              <button style="background: white; color:black; width:80%; margin:10px;  border:1px black solid;"><a href="Forms/filter.html">FILTER</a></button></button><br>
              <button style="background: white; color:black; width:80%; margin:10Px;  border:1px black solid;"><a href="Forms/submit.html">SUBMIT</a></button><br>
+             <button style="background: white; color:black; width:80%; margin:10Px;  border:1px black solid;"><a href="Forms/feedback.html">SUBMIT</a></button>
 
 
 
